[gd_scene load_steps=3 format=3 uid="uid://c8qvxmjy5wnxk"]

[ext_resource type="Script" path="res://scripts/ui/stats_dialog.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.14, 0.18, 0.98)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
content_margin_left = 24.0
content_margin_top = 24.0
content_margin_right = 24.0
content_margin_bottom = 24.0

[node name="StatsDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -300.0
offset_right = 280.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ðŸ“Š Statistiken"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3

[node name="StatsContainer" type="VBoxContainer" parent="Panel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="CloseButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
text = "SchlieÃŸen"

